--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
           </address>
         </div>
         <div class="footer-social">
-          <p>присоединяйтесь</p>
+          <p class="footer-heading">присоединяйтесь</p>
           <ul class="footer-icons">
             <li>
               <a href=""
@@ -386,6 +386,25 @@
               ></a>
             </li>
           </ul>
+        </div>
+        <div class="footer-form">
+          <p class="footer-heading">Подпишитесь на рассылку</p>
+          <form action="">
+            <input
+              type="email"
+              id="email-footer"
+              name="email-footer"
+              placeholder="E-mail"
+            />
+            <label for="email-footer"></label>
+
+            <button type="submit">
+              Подписаться
+              <svg width="24px" height="24px" fill="white">
+                <use href="./img/vectors.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
